<?xml version="1.0"?>
<package format="2">
  <name>ukf_catkin</name>
  <version>0.2.0</version>
  <description>Catkin wrapper for ukf.</description>
  <maintainer email="lgulich@ethz.ch">Lionel Gulich</maintainer>
  <license>See package</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
</package>
